--- a/Web Templates/Forms/form.css
+++ b/Web Templates/Forms/form.css
@@ -49,7 +49,6 @@ body {
   min-height: 100dvh;
   background-color: var(--color-background);
   color: var(--color-text);
-  padding: 50px 50px;
 }
 
 #form-styled {
@@ -63,90 +62,9 @@ body {
   /* border: #0056b3 solid 1px; */
 }
 
-/* ------------------------TEXT------------------------------- */
-
-.form-group-text {
+.form-group {
   position: relative;
   width: 80vw;
-}
-
-.form-group-text input {
-  font-size: 1em;
-  padding: 10px 10px 10px 5px;
-  display: block;
-  width: 100%;
-  border: none;
-  border-bottom: 1px solid var(--color-border);
-  background: transparent;
-  color: var(--color-text);
-
-  &:focus {
-    outline: none;
-  }
-}
-
-.form-group-text:has(input[required])::before,
-.form-group-date:has(input[required])::before {
-  content: '!';
-  font-size: 1.2em;
-  font-weight: bold;
-  position: absolute;
-  bottom: calc(50% - 0.6em);
-  right: -15px;
-  color: var(--color-accent);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.form-group-text label {
-  color: var(--color-text-secondary);
-  font-size: 1.2em;
-  font-weight: normal;
-  position: absolute;
-  pointer-events: none;
-  left: 5px;
-  top: 5px;
-  display: flex;
-  transition: 0.2s ease all;
-  -moz-transition: 0.2s ease all;
-  -webkit-transition: 0.2s ease all;
-}
-
-.form-group-text .input:focus~label,
-.form-group-text .input:valid~label {
-  top: -20px;
-  font-size: 0.9em;
-  color: var(--color-accent);
-}
-
-.form-group-text .bar {
-  position: relative;
-  display: block;
-  width: 100%;
-}
-
-.form-group-text .bar:after,
-.form-group {
-  content: '';
-  height: 2px;
-  width: 0;
-  left: 0;
-  bottom: 0px;
-  position: absolute;
-  background: var(--color-accent);
-  transition: 0.2s ease all;
-  -moz-transition: 0.2s ease all;
-  -webkit-transition: 0.2s ease all;
-}
-
-.form-group-text .input:focus~.bar:after {
-  width: 100%;
-}
-
-/* -----------------------------PASSWORD-------------------------- */
-.form-group-text.password {
-  position: relative;
 
   button {
     position: absolute;
@@ -169,75 +87,110 @@ body {
   }
 }
 
-/* .form-group-text.password::before{
-  content: none !important;
-} */
-
-.form-group-text.password:has(input[type='text']) {
-  svg:first-child {
-    display: block;
-  }
-
-  svg:last-child {
-    display: none;
-  }
-}
-
-.form-group-text.password:has(input[type='password']) {
-  svg:first-child {
-    display: none;
-  }
-
-  svg:last-child {
-    display: block;
-  }
-}
-
-/* ---------------------------DATE-------------------------------- */
-input[type="date"]::-webkit-calendar-picker-indicator {
-  display: none;
-}
-
-.form-group-date {
-  width: fit-content;
-  position: relative;
-
-  button {
-    position: absolute;
-    right: 0;
-    top: calc(50% - .8em);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    height: 1.6em;
-    width: 1.6em;
-
-    svg {
-      fill: var(--color-accent);
-      height: 100%;
-      width: 100%;
-    }
-  }
-}
-
-.form-group-date input {
+.form-group input {
   font-size: 1em;
-  border: none;
-  width: 18ch;
-  color: var(--color-text-secondary);
   padding: 10px 10px 10px 5px;
+  display: block;
+  width: 100%;
+  border: none;
   border-bottom: 1px solid var(--color-border);
   background: transparent;
-  appearance: none;
+  color: var(--color-text);
 
   &:focus {
     outline: none;
   }
 }
 
-.form-group-date input.has-date {
-  color: var(--color-text);
+.form-group:has(input[required])::before {
+  content: '!';
+  font-size: 1.2em;
+  font-weight: bold;
+  position: absolute;
+  bottom: calc(50% - 0.6em);
+  right: -15px;
+  color: var(--color-accent);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-group label {
+  color: var(--color-text-secondary);
+  font-size: 1.2em;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 5px;
+  top: 5px;
+  display: flex;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
+}
+
+.form-group input:focus~label,
+.form-group input:valid~label {
+  top: -20px;
+  font-size: 0.9em;
+  color: var(--color-accent);
+}
+
+.form-group .bar {
+  position: relative;
+  display: block;
+  width: 100%;
+}
+
+.form-group .bar:after {
+  content: '';
+  height: 2px;
+  width: 0;
+  left: 0;
+  bottom: 0px;
+  position: absolute;
+  background: var(--color-accent);
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
+}
+
+.form-group input:focus~.bar:after {
+  width: 100%;
+}
+
+/* ---------PASSWORD----------- */
+.form-group.password {
+  svg:first-child {
+    display: none;
+  }
+
+  svg:last-child {
+    display: block;
+  }
+
+  &:has(input[type='text']) {
+    svg:first-child {
+      display: block;
+    }
+
+    svg:last-child {
+      display: none;
+    }
+  }
+
+}
+
+/* ----------DATE------------ */
+.form-group input[type="date"]::-webkit-calendar-picker-indicator {
+  display: none;
+}
+.form-group.date {
+  width: 18ch;
+  input {
+    color: var(--color-text-secondary);
+  }
+  input.has-date{
+    color: var(--color-text);
+  }
 }
