--- a/Web Templates/Forms/form.css
+++ b/Web Templates/Forms/form.css
@@ -27,6 +27,7 @@
   --color-button-bg: #1e90ff;
   --color-button-text: #ffffff;
   --color-accent: #ff5722;
+  --color-hover: #7c7c7c;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@@ -200,7 +201,7 @@ body {
 
 /* ---------------CHECKBOX AND RADIOBUTTON------------------ */
 .form-box {
-  font-size: 1rem;
+  font-size: 1em;
   display: flex;
   width: fit-content;
   -webkit-user-select: none;
